--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html> 
-    <h1><head> This is my first git Hub project </head>
+    <h1><head> This is my first git Hub project </head> </h1>
 
 </html>
